import org.jetbrains.kotlin.gradle.dsl.JvmTarget

plugins {
    id 'java-library'
    id 'org.sonarqube' version '3.0'
    id 'jacoco'
    id 'antlr'
    id 'org.jetbrains.kotlin.jvm'
    id('com.github.johnrengelman.shadow') version '7.1.2'
}

kotlin {
    compilerOptions {
        jvmTarget = JvmTarget.JVM_21
    }
}

def productVersion = '0.2.19'
def productName = 'cobol-check'
group = 'org.openmainframeproject'
description = 'Unit testing framework for Cobol'
rootProject.tasks.named('processResources') {
    duplicatesStrategy = 'include'
}
def approvalExpectedOutput = 'approval-test-expected.txt'
def approvalActualOutput = 'output/testResults.txt'

sonarqube {
    properties {
        property 'sonar.projectKey', 'neopragma_cobol-check'
        property 'sonar.organization', 'neopragma-github'
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.exclusions', '**/EIBResponseCodes.java,**/Keyword.java'
    }
}

jacoco {
    toolVersion = '0.8.13'
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            element = 'CLASS'
            limit {
                minimum = 0.8
            }
            excludes = ['*Constants',
                        '*Exception',
                        '*DirectoryNameMatcher',
                        '*Driver',
                        '*EIBResponseCodes',
                        '*Exception*',
                        '*Generator',
                        '*Keyword',
                        '*LinuxProcessLauncher',
                        '*Log',
                        '*Flag',
                        '*StringHelper',
                        '*TestSuiteConcatenator']
        }
        rule {
            element = 'CLASS'
            limit {
                minimum = 0.2
            }
            includes = ['*LinuxProcessLauncher',
                        '*TestSuiteConcatenator']
        }
    }
}

ext {
    mainClassName = 'org.openmainframeproject.cobolcheck.Main'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        resources {
            srcDirs 'src/main/resources', 'src/test/resources'
        }
    }
}

generateGrammarSource {
    arguments += ['-visitor']
}

test {
    description = 'Runs all tests'
    testLogging {
        showStandardStreams = true
        events 'passed', 'skipped', 'failed'
    }
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '-Xlint:deprecation',
            '-Xlint:unchecked'
    ]
    options.deprecation = true
}

dependencies {
    antlr 'org.antlr:antlr4:4.13.1'
    implementation 'org.jetbrains:annotations:15.0'
    implementation 'javax.xml.bind:jaxb-api:2.3.0'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
    implementation 'io.github.oshai:kotlin-logging-jvm:7.0.3'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
    implementation 'org.antlr:antlr4-runtime:4.13.1'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
    testImplementation('org.junit.jupiter:junit-jupiter:5.13.0')
    testImplementation('org.junit.jupiter:junit-jupiter-params:5.13.0')
    testImplementation('org.junit.platform:junit-platform-engine:1.13.0')
    testImplementation('org.junit.platform:junit-platform-launcher:1.13.0')
    testImplementation 'org.mockito:mockito-core:5.13.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.13.0'
    testImplementation 'org.slf4j:slf4j-api:1.7.36'
    testImplementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
}

def unitTest = tasks.register('unitTest', Test) {
    description = 'Run unit tests only'
    useJUnitPlatform()
    filter {
        includeTestsMatching 'org.openmainframeproject.cobolcheck.*Test'
        includeTestsMatching 'ai.phasechange.gherkin.*Test'
    }
}

tasks.unitTest {
    testClassesDirs = testing.suites.test.sources.output.classesDirs
    classpath = testing.suites.test.sources.runtimeClasspath
}

def integrationTest = tasks.register('integrationTest', Test) {
    description = 'Run integration tests only'
    dependsOn unitTest
    useJUnitPlatform()
    filter {
        includeTestsMatching 'org.openmainframeproject.cobolcheck.*IT'
    }
}

tasks.integrationTest {
    testClassesDirs = testing.suites.test.sources.output.classesDirs
    classpath = testing.suites.test.sources.runtimeClasspath
}


tasks.register('clearLibJar', Delete) {
    delete fileTree(dir: 'build/libs', include: '**.jar')
}

shadowJar {
    archiveFileName.set "${productName}-${productVersion}.jar"
    description = 'Create executable jar'
    dependsOn integrationTest, clearLibJar
    manifest {
        attributes 'Main-Class': "${mainClassName}",
                'Implementation-Title': 'Gradle Quickstart',
                'Implementation-Version': productVersion
    }
}

tasks.register('copyJarToBin', Copy) {
    description = 'Copy executable jar to bin directory prior to distribution'
    dependsOn shadowJar
    from('build/libs/')
    include '**/*.jar'
    into 'bin/'
}

tasks.register('clearExtensionJar', Delete) {
    delete fileTree(dir: 'vs-code-extension/Cobol-check/bin', include: '**.jar')
}

tasks.register('copyJarToExtension', Copy) {
    description = 'Copy executable jar to bin and VS Code extension bin directories prior to distribution'
    dependsOn clearExtensionJar, shadowJar
    from('build/libs/')
    include '**/*.jar'
    into 'vs-code-extension/Cobol-check/bin/'
}

tasks.register('copyRunScripts', Copy) {
    description = 'Makes copies of run scripts'
    from "${projectDir}/cobolcheck.cmd"
    into "${projectDir}/GradleTemp"
    filter { line -> line.replaceAll('@VERSION@', productVersion) }
    from "${projectDir}/cobolcheck"
    into "${projectDir}/GradleTemp"
    filter { line -> line.replaceAll('@VERSION@', productVersion) }
}

tasks.register('prepareDistribution', Zip) {
    archiveFileName.set "${productName}-${productVersion}.zip"
    description = 'Prepare distribution archive'
    dependsOn copyJarToBin, copyJarToExtension, copyRunScripts
    from("${projectDir}") {
        include(['config.properties',
                 'scripts/*',
                 "bin/${productName}-${productVersion}.jar",
                 'src/main/cobol/ALPHA.CBL',
                 'src/main/cobol/NUMBERS.CBL',
                 'src/test/cobol/ALPHA/*',
                 'src/test/cobol/NUMBERS/*'])
        rename('build/libs/(.*)', '$1')
    }

    from("${projectDir}/GradleTemp")

    doLast {
        delete 'GradleTemp'
    }
}

def approvalTest = tasks.register('approvalTest', Test) {
    description = 'Run approval test only'
    dependsOn shadowJar
    def output = -1

    println System.getProperty('os.name')
    if (System.getProperty('os.name') == 'linux') {
        println 'Linux detected'
        def proc = './approvaltest'.execute()
        proc.waitForProcessOutput(System.out, System.err)
    }
    if (System.getProperty('os.name').toLowerCase().contains('windows')) {
        println 'Windows detected'
        def proc = './approvaltestWin.cmd'.execute()
        proc.waitForProcessOutput(System.out, System.err)
    }

    output = new BuildHelper().compareFiles(approvalExpectedOutput, approvalActualOutput, true)
    println "exit from compare: ${output}"

    if (output != 0) {
        println '*** FAIL ***'
        throw new StopExecutionException("${approvalExpectedOutput} and ${approvalActualOutput} are different")
    } else {
        println "${approvalExpectedOutput} matches ${approvalActualOutput} - PASS"
    }
}

tasks.approvalTest {
    testClassesDirs = testing.suites.test.sources.output.classesDirs
    classpath = testing.suites.test.sources.runtimeClasspath
}

tasks.register('defaultProperties') {
    description = 'Show the default properties for this project'
    println "Project: $project"
    println "Name: $name"
    println "Path: $path"
    println "Project directory: $projectDir"
    println "Build directory: ${layout.getBuildDirectory()}"
    println "Version: $version"
    println "Group: $project.group"
    println "Description: $project.description"
}

tasks.register('osInfo') {
    description = 'Show information about the operating system'
    doLast {
        println "Family:       ${System.getProperty('os.name')}"
        println "Version:      ${System.getProperty('os.version')}"
        println "Architecture: ${System.getProperty('os.arch')}"
    }
}

test {
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}

compileKotlin {
    dependsOn generateGrammarSource
}

compileTestKotlin {
    dependsOn generateTestGrammarSource
}

class BuildHelper {
    static int compareFiles(String file1, String file2, boolean trimLines) {
        BufferedReader reader1
        BufferedReader reader2
        try {
            reader1 = new BufferedReader(new FileReader(file1))
            reader2 = new BufferedReader(new FileReader(file2))
            int lineCount = 0
            String line1
            String line2 = ''
            while ((line1 = reader1.readLine()) != null && (line2 = reader2.readLine()) != null) {
                lineCount++
                if (trimLines) {
                    line1 = line1.trim()
                    line2 = line2.trim()
                }
                if (line1 != line2) {
                    println("Difference on line ${lineCount}:")
                    println("   ${file1}: ${line1}")
                    println("   ${file2}: ${line2}")
                    return 1
                }
            }
            return 0
        } catch (Exception e) {
            println("Error while comparing: ${e.message}")
            return -1
        } finally {
            if (reader1 != null) reader1.close()
            if (reader2 != null) reader2.close()
        }

    }
}
